# ckb-mldsa-lock

./: .gitignore  .gitmodules  Cargo.toml  README.md
contracts/falcon-lock-v2/: Cargo.toml  rust-toolchain.toml
contracts/falcon-lock-v2/.cargo/: config.toml
contracts/falcon-lock-v2/src/: entry.rs  lib.rs
contracts/mldsa-lock/: Makefile  ckb_link.ld  mldsa_witness.mol
contracts/mldsa-lock-v2/: Cargo.toml  ckb-contract.ld
contracts/mldsa-lock-v2-rust/: Cargo.toml  rust-toolchain.toml
contracts/mldsa-lock-v2-rust/.cargo/: config.toml
contracts/mldsa-lock-v2-rust/src/: entry.rs  helpers.rs  lib.rs  streamer.rs
contracts/mldsa-lock-v2/.cargo/: config.toml
contracts/mldsa-lock-v2/src/: entry.rs  lib.rs
contracts/mldsa-lock/src/: entry.c  mldsa_adapter.c  mldsa_adapter.h  mldsa_params.h  startup.S  sys.c
contracts/mldsa-lock/tests/: gen_test_vector.c
crates/molecule-types/: Cargo.toml
crates/molecule-types/src/: lib.rs
crates/sdk-rust/: Cargo.toml
crates/sdk-rust/benches/: sdk.rs
crates/sdk-rust/src/: lib.rs
deploy/: deployment-info.session9-backup.json  deployment.toml
docs/: benchmark-report.md  falcon-investigation-2026-04-08.md  graph-usage-records.md  mainnet-readiness-checklist.md  quantum-purse-multi-pq-plan.md
scripts/: benchmark.sh
sdk/js/: package-lock.json  package.json  tsconfig.json
sdk/js/src/: bench.ts  index.test.ts  index.ts
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
tests/integration/tests/: falcon_lock_v2_roundtrip.rs  mldsa_lock_v2_roundtrip.rs  mldsa_lock_v2_rust_roundtrip.rs  mldsa_lock_v2_rust_smoke.rs  mldsa_lock_v2_smoke.rs
