[package]
name = "mldsa-lock-v2-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "ckb-testtool integration tests for the v2 Rust ML-DSA lock binaries"

# Standalone — intentionally NOT a workspace member. The root workspace members
# (sdk-rust, molecule-types) are v1 infrastructure and carry v1 digest code;
# this crate drives the v2 contract binaries through ckb-testtool's VM sim and
# depends on ckb-fips204-utils from the sibling key-vault-wasm repo.
[workspace]

[lib]
path = "src/lib.rs"

[dev-dependencies]
ckb-testtool = "1.1.1"
ckb-fips204-utils = { path = "../../../code/key-vault-wasm/crates/ckb-fips204-utils", default-features = false, features = ["std", "verifying"] }
fips204 = { version = "0.4.6", features = ["default-rng", "ml-dsa-65"] }
# Force ckb-hash's default features so blake2b-rs is linked in the host build.
# ckb-fips204-utils sets default-features=false on ckb-hash for no_std contract
# builds; our host tests need the std path, so we add ckb-hash as a direct dep
# with defaults and Cargo unifies the feature set.
ckb-hash = "0.200.0"
