[package]
name = "mldsa-lock-v2-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false
description = "ckb-testtool integration tests for the v2 Rust ML-DSA lock binaries"

# Standalone — intentionally NOT a workspace member. The root workspace members
# (sdk-rust, molecule-types) are v1 infrastructure and carry v1 digest code;
# this crate drives the v2 contract binaries through ckb-testtool's VM sim and
# depends on ckb-fips204-utils from the sibling key-vault-wasm repo.
[workspace]

[lib]
path = "src/lib.rs"

[[bin]]
name = "mldsa65_spend_test"
path = "src/bin/mldsa65_spend_test.rs"

[dependencies]
# Runtime deps for the `mldsa65_spend_test` bin (not for tests — tests only
# need dev-deps). bin targets in a crate can't use dev-deps, so these are
# duplicated from dev-dependencies.
ckb-fips204-utils = { path = "../../../code/key-vault-wasm/crates/ckb-fips204-utils", default-features = false, features = ["std", "verifying", "signing", "host-hashing", "falcon", "falcon-signing"] }
ckb-types = "1.1.0"
ckb-jsonrpc-types = "1.1.1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2", features = ["json"] }
bech32 = "0.11"
# ml-dsa crate (RustCrypto) + HKDF deps needed by the bin target to sign for
# the v2-rust lock variants. Must live in [dependencies] because bin targets
# can't see [dev-dependencies]; the round-trip test separately depends on
# ml-dsa under [dev-dependencies] already — Cargo unifies them at build time.
ml-dsa = { git = "https://github.com/RustCrypto/signatures", rev = "66473ec" }
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
ckb-testtool = "1.1.1"
ckb-fips204-utils = { path = "../../../code/key-vault-wasm/crates/ckb-fips204-utils", default-features = false, features = ["std", "verifying", "signing", "host-hashing", "falcon", "falcon-signing"] }
fips204 = { version = "0.4.6", features = ["default-rng", "ml-dsa-65"] }
# ml-dsa crate (RustCrypto) — host-side signer for the v2-rust round-trip
# test. Same git rev the contract pins. Default features enable std + the
# `sign_deterministic(msg, ctx)` API on ExpandedSigningKey.
ml-dsa = { git = "https://github.com/RustCrypto/signatures", rev = "66473ec" }
serde_json = "1.0"
